--- a/buddyApp/package.json
+++ b/buddyApp/package.json
@@ -10,6 +10,7 @@
     "native-base": "^2.3.5",
     "react": "16.0.0",
     "react-native": "0.51.0",
+    "react-native-camera": "^0.12.0",
     "react-native-easy-grid": "^0.1.15",
     "react-native-svg": "^6.0.1-rc.1",
     "react-navigation": "^1.0.0-beta.22",
