--- a/buddyApp/package.json
+++ b/buddyApp/package.json
@@ -12,6 +12,7 @@
     "react-native": "0.51.0",
     "react-native-camera": "^0.12.0",
     "react-native-easy-grid": "^0.1.15",
+    "react-native-router-flux": "^4.0.0-beta.27",
     "react-native-svg": "^6.0.1-rc.1",
     "react-navigation": "^1.0.0-beta.22",
     "victory-native": "^0.16.6"
