--- a/Buddy/package.json
+++ b/Buddy/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-react-native-stage-0": "^1.0.1",
     "jest-expo": "23.0.0",
     "react-test-renderer": "16.0.0"
@@ -29,6 +30,7 @@
     "react-navigation": "^1.0.0-beta.23",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
+    "redux-persist": "^5.4.0",
     "victory-native": "^0.16.6"
   },
   "rnpm": {
