--- a/Buddy/package.json
+++ b/Buddy/package.json
@@ -6,7 +6,8 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-react-native-stage-0": "^1.0.1",
     "jest-expo": "23.0.0",
-    "react-test-renderer": "16.0.0"
+    "react-test-renderer": "16.0.0",
+    "redux-logger": "^3.0.6"
   },
   "scripts": {
     "start": "react-native start",
@@ -18,6 +19,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "aws-amplify": "^0.1.0",
     "aws-amplify-react-native": "^0.1.11",
     "native-base": "^2.3.6",
@@ -31,6 +33,7 @@
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-persist": "^5.4.0",
+    "redux-thunk": "^2.2.0",
     "victory-native": "^0.16.6"
   },
   "rnpm": {
