--- a/Buddy/awsmobilejs/backend/mobile-hub-project.yml
+++ b/Buddy/awsmobilejs/backend/mobile-hub-project.yml
@@ -9,31 +9,6 @@ features:
   mobile-analytics: !com.amazonaws.mobilehub.v0.Pinpoint 
     components:
       analytics: !com.amazonaws.mobilehub.v0.PinpointAnalytics {}
-  sign-in: !com.amazonaws.mobilehub.v0.SignIn 
-    attributes:
-      enabled: true
-      optional-sign-in: false
-    components:
-      sign-in-facebook: !com.amazonaws.mobilehub.v0.StandardIdentityProvider 
-        attributes:
-          provider-id: '322887791546157'
-          provider-name: facebook
-      sign-in-user-pools: !com.amazonaws.mobilehub.v0.UserPoolsIdentityProvider 
-        attributes:
-          alias-attributes:
-            - email
-            - phone_number
-          mfa-configuration: 'ON'
-          name: userpool
-          password-policy: !com.amazonaws.mobilehub.ConvertibleMap 
-            min-length: '8'
-            require-lower-case: true
-            require-numbers: true
-            require-symbols: true
-            require-upper-case: true
-  user-files: !com.amazonaws.mobilehub.v0.UserFiles 
-    attributes:
-      enabled: true
-      wildcard-cors-policy: true
-name: BuddyApp
+  sign-in: !com.amazonaws.mobilehub.v0.SignIn {}
+name: Buddy-2018-01-16-17-59-01
 region: us-west-1
