--- a/Buddy/package.json
+++ b/Buddy/package.json
@@ -19,8 +19,10 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "amazon-cognito-identity-js": "^1.31.0",
     "aws-amplify": "^0.1.0",
     "aws-amplify-react-native": "^0.1.11",
+    "aws-sdk": "^2.185.0",
     "axios": "^0.17.1",
     "native-base": "^2.3.6",
     "react": "16.0.0",
